--- a/pyproject.toml
+++ b/pyproject.toml
@@ -13,4 +13,11 @@ dependencies = [
     "flask-alembic>=3.1.1",
     "argon2-cffi>=23.1.0",
     "flask-babel>=4.0.0",
+    "requests>=2.32.3",
+    "bootstrap-flask>=2.4.1",
+]
+
+[tool.uv]
+dev-dependencies = [
+    "djlint>=1.35.2",
 ]
