--- a/pyproject.toml
+++ b/pyproject.toml
@@ -15,6 +15,8 @@ dependencies = [
     "flask-babel>=4.0.0",
     "requests>=2.32.3",
     "bootstrap-flask>=2.4.1",
+    "cryptography>=43.0.3",
+    "qrcode>=8.0",
 ]
 
 [tool.uv]
