--- a/pyproject.toml
+++ b/pyproject.toml
@@ -17,6 +17,7 @@ dependencies = [
     "bootstrap-flask>=2.4.1",
     "cryptography>=43.0.3",
     "qrcode>=8.0",
+    "python-dotenv>=1.0.1",
 ]
 
 [tool.uv]
