--- a/pyproject.toml
+++ b/pyproject.toml
@@ -21,6 +21,7 @@ dependencies = [
 ]
 
 [tool.uv]
-dev-dependencies = [
-    "djlint>=1.35.2",
-]
+dev-dependencies = ["djlint>=1.35.2"]
+
+[tool.djlint]
+ignore = "H021"
