--- a/pyproject.toml
+++ b/pyproject.toml
@@ -18,6 +18,7 @@ dependencies = [
     "cryptography>=43.0.3",
     "qrcode>=8.0",
     "python-dotenv>=1.0.1",
+    "gunicorn>=23.0.0",
 ]
 
 [tool.uv]
