--- a/pyproject.toml
+++ b/pyproject.toml
@@ -6,7 +6,7 @@ readme = "README.md"
 requires-python = ">=3.12"
 dependencies = [
     "flask>=3.0.3",
-    "flask-admin>=1.6.1",
+    "flask-admin==2.0.0a2",
     "flask-security-too>=5.5.2",
     "setuptools>=75.2.0",
     "flask-sqlalchemy-lite>=0.1.0",
