--- a/pyproject.toml
+++ b/pyproject.toml
@@ -24,6 +24,7 @@ dependencies = [
     "authlib>=1.3.2",
     "mysqlclient>=2.2.6",
     "icalendar>=6.1.0",
+    "flask-limiter>=3.10.1",
 ]
 
 [tool.uv]
